<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionActivity">


    <TextView
        android:id="@+id/goal_exhibit_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/light_pink"
        android:gravity="center"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        android:text="TextView"
        android:textColor="#D32F2F"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/brief_path"
        app:layout_constraintEnd_toStartOf="@+id/path_total_distance"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_exhibit_name"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/brief_path"
        android:layout_width="0dp"
        android:layout_height="330dp"
        app:layout_constraintBottom_toTopOf="@+id/previous_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_exhibit_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailed_path"
        android:layout_width="0dp"
        android:layout_height="330dp"
        app:layout_constraintBottom_toBottomOf="@+id/brief_path"
        app:layout_constraintEnd_toEndOf="@+id/brief_path"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/brief_path"
        app:layout_constraintTop_toTopOf="@+id/brief_path"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/start_exhibit_name"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/main_theme_pink"
        android:gravity="left"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:onClick="onNextButtonClick"
        android:text="NEXT"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toEndOf="@+id/previous_button"
        app:layout_constraintTop_toBottomOf="@+id/next_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="onBackButtonClick"
        android:text="PREVIOUS"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_text"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/detail_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="DETAIL"
        android:textSize="20sp"
        android:onClick="OnSettingDisplayClick"
        app:layout_constraintBottom_toTopOf="@+id/previous_text"
        app:layout_constraintEnd_toStartOf="@id/skip_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClearButtonClick_DirectionActivity"
        android:text="Clear"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_button"
        app:layout_constraintEnd_toStartOf="@id/replan_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brief_path"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/replan_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="5dp"
        android:onClick="onReplanButtonClick"
        android:text="replan"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/skip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/clear_button"
        app:layout_constraintTop_toBottomOf="@+id/brief_path"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="SKIP"
        android:textSize="20sp"
        android:onClick="OnSkipClick"
        app:layout_constraintBottom_toTopOf="@+id/previous_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_button"
        app:layout_constraintTop_toBottomOf="@+id/brief_path"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/previous_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/previous_button"
        app:layout_constraintEnd_toStartOf="@+id/next_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brief_path" />

    <TextView
        android:id="@+id/next_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/previous_text"
        app:layout_constraintTop_toBottomOf="@+id/brief_path" />

    <TextView
        android:id="@+id/path_total_distance"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@color/light_pink"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#6D4C41"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/brief_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goal_exhibit_name"
        app:layout_constraintTop_toBottomOf="@+id/start_exhibit_name"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:onClick="onEnterButtonClick"
        android:text="Enter Coord"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/service_button"
        app:layout_constraintTop_toBottomOf="@+id/brief_path"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/service_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onServiceButtonClick"
        android:text="MOCK"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toStartOf="@+id/enter_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brief_path" />




</androidx.constraintlayout.widget.ConstraintLayout>