<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchAnimalActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_searched_animals"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/selected_animals_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_such_animal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="There is no such animal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/selected_animals_number"
        app:layout_constraintEnd_toEndOf="@id/all_searched_animals"
        app:layout_constraintStart_toStartOf="@id/all_searched_animals"
        app:layout_constraintTop_toBottomOf="@+id/all_searched_animals" />

    <TextView
        android:id="@+id/below_are_selected_animals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/main_theme_pink"
        android:text="Selected animals: "
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/selected_animals_number"
        app:layout_constraintEnd_toStartOf="@+id/selected_animals_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/selected_animals_number"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_selected_animals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_animals_number" />

    <Button
        android:id="@+id/plan_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/main_theme_pink"
        android:onClick="onPlanClick"
        android:text="Plan"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_selected_animals" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/main_theme_pink"
        android:onClick="onClearButtonClick_SearchActivity"
        android:text="Clear"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plan_button"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_selected_animals" />

    <TextView
        android:id="@+id/selected_animals_number"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@color/main_theme_pink"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/all_selected_animals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/below_are_selected_animals"
        app:layout_constraintTop_toBottomOf="@+id/all_searched_animals" />


</androidx.constraintlayout.widget.ConstraintLayout>